[package]
name = "smce-rs"
version = "0.1.0"
authors = ["Ruthger Dijt <ruthgerdijt@gmail.com>"]
edition = "2018"
links = "smce"
repository = "https://github.com/ItJustWorksTM/libsmce-rs"
description = "Bindings libSMCE."
categories = ["external-ffi-bindings"]
build = "build/build.rs"

[dependencies]
cxx = { version = "1.0", features = ["c++20"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }

[[example]]
name = "std_uart"
path = "examples/stduart/stduart.rs"
